--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   "private": false,
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "compile": "yarn tsc",
-    "start": "yarn compile && node dist/index.js"
+    "build": "tsc",
+    "start": "yarn build && node dist/index.js"
   },
   "dependencies": {
     "@types/node": "^24.3.0",
     "discord.js": "^14.21.0",
+    "fastify": "^5.5.0",
     "mongoose": "^8.18.0"
   },
   "devDependencies": {
